@@ -1,6 +1,7 @@
 == In Git
 
 === New Features
+* New bundler attribute on the Rake task, allowing faster execution. (Aslak Hellesøy)
 * Fix Table#rows cell ordering in ruby 1.8. (#47_github Brian Dunn)
 
 == 0.10.2 (2011-03-21)
